# UEProjectIntelligence

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  UEProjectIntelligence.uplugin
Docs/: AnimGraph-Editing.md  Architecture-vNext.md  Blueprint-Editing.md  DevelopmentStatus.md  Known-Limitations.md  MCP-Tools.md  Operation-Catalog.md  Property-Values.md  Runtime-Verification.md  codex-example-questions.md  codex-setup.md  context-routes.md  definition-of-done.md  developer-architecture.md  extension-sdk.md  fixture-inventory.md  live-bridge.md  migration-guide.md  operation-schemas.md  operations-runbook.md  read-workflows.md  real-machine-test-log.md  real-machine-test-report-template.md  release-checklist.md  sample-queries.md  schema-reference.md  support-matrix.md  terminology.md  troubleshooting.md  user-guide.md  user-installation.md  write-alpha-design.md  write-safety.md
Resources/: AGENTS.template.md  codex-config.template.toml
Schemas/: ai.schema.json  animation.schema.json  asset-scan.schema.json  audio.schema.json  data.schema.json  (+24 more)
Services/uepi/: README.md  pyproject.toml
Services/uepi/src/uepi/: __init__.py  __main__.py  blueprint_semantics.py  bridge_client.py  cache.py  context_pack.py  context_ranker.py  context_routes.py  cpp_symbols.py  diff.py  edit.py  editor.py  identity.py  mcp_server.py  operation_catalog.py  pagination.py  plan.py  projections.py  query.py  recovery.py  refresh.py  result.py  runtime.py  schema_service.py  snapshot.py  status.py  store.py  timing.py  world.py
(+188 files in other folders)
